@@ -1,3 +1,9 @@
+2006-08-21  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXCarbonEvents.c (CarbonTimerProc): avoid starving main
+	event loop: limit the number of tcl events processed per invocation.
+	Fixes bug reported on tcl-mac by Kevan Hashemi.
+
 2006-08-18  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/tcl.m4 (Darwin): add support for --enable-64bit on x86_64, for
